--- a/2_김태연.html
+++ b/2_김태연.html
@@ -330,6 +330,7 @@
         }
         .game20Win-loseAndGame20PerAndgame20KDAandgame20KDAvs1 img {
             width: 20px;
+            cursor: wait;
         }
         .game20Win-lose {
             display: flex;
