--- a/2_김태연.html
+++ b/2_김태연.html
@@ -382,7 +382,7 @@
             opacity: 1;
             box-shadow: 3px 3px 10px yellow;
         }
-        .topTimes img, .jungleTimes img, .midTimes img, .bottomTimes img, .supportTimes img {
+        .topTimes img, .jungleTimes img, .midTimes img, .bottomTimes img, .supportTimes img, .aramTimes img {
             cursor:wait;
         }
         .game20PerInfo {
